<resources>
    <string name="app_name">StaffUI</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_staff_sync_status">Check Staff Sync Status</string>
    <string name="support_access">Support Access</string>
    <string name="all">All</string>
    <string name="attendance">Attendance</string>
    <string name="pay_slip">Pay Slip</string>
    <string name="working_since">Working since</string>
    <string name="add_button">Add button</string>
    <string name="staff_name">Staff Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="new_staff">NEW STAFF</string>
    <string name="save">Save</string>
</resources>