<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:id="@+id/info_rl">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:text="Raiz"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/name"
            android:text="raiz@mail.com"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="Helper Permissions"
            android:padding="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:background="@color/gray"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/view"
            android:layout_below="@+id/email"
            android:background="@color/gray"
            android:layout_marginTop="2dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attendance"
                android:id="@+id/attendance_tv"
                android:textColor="@color/white"
                android:background="@color/blue"
                android:padding="2dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_slip"
                android:id="@+id/pay_slip_tv"
                android:textColor="@color/white"
                android:background="@color/blue"
                android:padding="2dp"
                android:layout_toEndOf="@+id/attendance_tv"

                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/working_since"
                android:id="@+id/working_since_tv"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>